--- a/КПиЯП/Гончаров Матвей/delegatesobitia/delegatesobitia/delegatesobitia.csproj
+++ b/КПиЯП/Гончаров Матвей/delegatesobitia/delegatesobitia/delegatesobitia.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Book.cs" />
+    <Compile Include="conteinerBook.cs" />
+    <Compile Include="InterfaceFI.cs" />
+    <Compile Include="InterfaceFIO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task3.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
