--- a/ПрактПрограм/Гончаров Матвей/Ассоциации/Ассоциации/Ассоциации.csproj
+++ b/ПрактПрограм/Гончаров Матвей/Ассоциации/Ассоциации/Ассоциации.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\My_The_Best_Libruary\My_The_Best_Libruary.csproj" />
+  </ItemGroup>
+
 </Project>
