--- a/КПиЯП/Гончаров Матвей/delegatesobitia/delegatesobitia/delegatesobitia.csproj
+++ b/КПиЯП/Гончаров Матвей/delegatesobitia/delegatesobitia/delegatesobitia.csproj
@@ -44,11 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Book.cs" />
+    <Compile Include="Calculator.cs" />
+    <Compile Include="Computer.cs" />
     <Compile Include="conteinerBook.cs" />
-    <Compile Include="InterfaceFI.cs" />
-    <Compile Include="InterfaceFIO.cs" />
+    <Compile Include="NewsOperator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceSubscriber.cs" />
     <Compile Include="Task3.cs" />
   </ItemGroup>
   <ItemGroup>
